--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div id="header.html"></div>
+    <div id="header"></div>
     
     <!-- Hero Section -->
     <section class="hero">
@@ -20,7 +20,7 @@
     </section>
 
     <!-- Footer -->
-    <div id="footer.html"></div>
+    <div id="footer"></div>
 
     <script src="script.js"></script>
 </body>
