--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="logo.png" alt="Youth Spring Logo" height="50px"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -9,7 +9,7 @@
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#programs">Programs</a></li>
                 <li class="nav-item"><a class="nav-link" href="#register">Apply for Loan</a></li>
-                <li class="nav-item"><a class="nav-link btn btn-donate" href="#donate">Donate</a></li>
+                
             </ul>
         </div>
     </div>
