--- a/index.html
+++ b/index.html
@@ -4,12 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth Spring - Empowering Nigerian Youth</title>
-    <link rel="stylesheet" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fdf6e3; /* Soft cream background */
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Header */
+        #header {
+            background-color: #ffcc33; /* Sunflower yellow */
+            padding: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(to right, #ffcc33, #ff9933); /* Yellow-orange gradient */
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
+        }
+
+        .hero h1 {
+            font-size: 2.5em;
+            font-weight: bold;
+        }
+
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+
+        .btn-donate {
+            background-color: #ff6600; /* Deep orange */
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .btn-donate:hover {
+            background-color: #cc5500;
+        }
+
+        /* Footer */
+        #footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
-    <div id="header"></div>
+    <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     
     <!-- Hero Section -->
     <section class="hero">
@@ -21,11 +80,9 @@
     </section>
 
     <!-- Footer -->
-    <div id="footer"></div>
+    <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
 
-    <script src="script.js"></script>
-    <!-- Bootstrap JavaScript -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
