--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
         <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
     </div>
 </section>
-
+<!-- body post here -->
+<div class="about">
+    <p>what God can not do, does not exist </p>
+</div>
 <!-- Footer -->
 <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
 
