--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 </section>
 <!-- body post here -->
-<div class="about">
+<div class="container">
     <p>what God can not do, does not exist </p>
 </div>
 <!-- Footer -->
