--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,110 +13,104 @@
             color: #333;
             margin: 0;
             padding: 0;
-        }/* Header */
-    #header {
-        background-color: #ffcc33; /* Sunflower yellow */
-        padding: 15px;
-        text-align: center;
-        font-weight: bold;
-    }
-
-    /* Navigation Grid */
-    .nav-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-        gap: 10px;
-        background-color: #ffe066;
-        padding: 15px;
-        text-align: center;
-    }
-
-    .nav-grid a {
-        display: block;
-        background-color: #ff6600;
-        color: white;
-        padding: 10px;
-        border-radius: 5px;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    .nav-grid a:hover {
-        background-color: #cc5500;
-    }
-
-    /* Hero Section */
-    .hero {
-        background: linear-gradient(to right, #ffcc33, #ff9933); /* Yellow-orange gradient */
-        color: white;
-        text-align: center;
-        padding: 80px 20px;
-    }
-
-    .hero h1 {
-        font-size: 2.5em;
-        font-weight: bold;
-    }
-
-    .hero p {
-        font-size: 1.2em;
-        margin-bottom: 20px;
-    }
-
-    .btn-donate {
-        background-color: #ff6600; /* Deep orange */
-        color: white;
-        padding: 10px 20px;
-        font-size: 1.2em;
-        border-radius: 5px;
-        text-decoration: none;
-    }
-
-    .btn-donate:hover {
-        background-color: #cc5500;
-    }
-
-    /* Footer */
-    #footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 15px;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-    }
-</style>
-
+        }
+        /* Header */
+        #header {
+            background-color: #ffcc33; /* Sunflower yellow */
+            padding: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+        /* Navigation Grid */
+        .nav-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 10px;
+            background-color: #ffe066;
+            padding: 15px;
+            text-align: center;
+        }
+        .nav-grid a {
+            display: block;
+            background-color: #ff6600;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .nav-grid a:hover {
+            background-color: #cc5500;
+        }
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(to right, #ffcc33, #ff9933); /* Yellow-orange gradient */
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
+        }
+        .hero h1 {
+            font-size: 2.5em;
+            font-weight: bold;
+        }
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+        .btn-donate {
+            background-color: #ff6600; /* Deep orange */
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn-donate:hover {
+            background-color: #cc5500;
+        }
+        /* Footer */
+        #footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
-    <div id="header">Youth Spring - Empowering Nigerian Youth</div><!-- Navigation Grid -->
-<div class="nav-grid">
-    <a href="#about">About Us</a>
-    <a href="#loan">Get a Loan</a>
-    <a href="#donate">Donate</a>
-    <a href="#volunteer">Volunteer</a>
-    <a href="#contact">Contact Us</a>
-</div>
-
-<!-- Hero Section -->
-<section class="hero">
-    <div class="container">
-        <h1>Empowering Nigerian Youth & The Helpless</h1>
-        <p>Together, we can create opportunities for a brighter future.</p>
-        <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
+    <div id="header">Youth Spring - Empowering Nigerian Youth</div>
+    <!-- Navigation Grid -->
+    <div class="nav-grid">
+        <a href="#about">About Us</a>
+        <a href="#loan">Get a Loan</a>
+        <a href="#donate">Donate</a>
+        <a href="#volunteer">Volunteer</a>
+        <a href="#contact">Contact Us</a>
     </div>
-</section>
-<!-- body post here -->
-<div class="container">
-    <p>what God can not do, does not exist </p>
-</div>
-<!-- Footer -->
-<div id="footer">© 2025 Youth Spring. All rights reserved.</div>
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Empowering Nigerian Youth & The Helpless</h1>
+            <p>Together, we can create opportunities for a brighter future.</p>
+            <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
+        </div>
+    </section>
+    <!-- body post here -->
+    <div class="container">
+    <p>What God cannot do does not exist.</p>
+    <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
+    <img src="path_to_your_image.jpg" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
+    <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
+    <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
+    <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
+    </div>
+    <!-- Footer -->
+    <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
