--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
             <p>Together, we can create opportunities for a brighter future.</p>
             <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
         </div>
-    </section>
-    <!-- body post here -->
-    <div class="container">
+   </section>
+<!-- body post here -->
+<div id="body" class="container" align="center">
     <p>What God cannot do does not exist.</p>
     <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
     <img src="Image/images (6)_1.jpeg" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
     <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
     <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
     <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
-    </div>
+</div>
     <!-- Footer -->
     <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
