--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
         .btn-donate:hover {
             background-color: #cc5500;
         }
+        /* postbody */
+        #postbody{ 
+            font-size: 2.5em;
+            text-align: center;
+        }
         /* Footer */
         #footer {
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 15px;
+            padding: 20px;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -100,7 +105,7 @@
         </div>
    </section>
 <!-- body post here -->
-<div id="body" class="container" align="center">
+<div id="postbody" class="container">
     <p>What God cannot do does not exist.</p>
     <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
     <img src="Image/images (6)_1.jpeg" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
