--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             color: #333;
             margin: 0;
             padding: 0;
+            display: flex;              
+            flex-direction: column;
+            min-height: 100vh;        
         }
         /* Header */
         #header {
@@ -72,10 +75,12 @@
         #postbody{ 
             font-size: 2.5em;
             text-align: center;
+            flex: 1;
+            margin-bottom: 20px;
         }
         /* Footer */
         #footer {
-            background-color: #333;
+            background-color: #f1f1f1;
             color: white;
             text-align: center;
             padding: 20px;
