--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         }
         /* postbody */
         #postbody{ 
-            font-size: 2.5em;
+            font-size: 2.0em;
             text-align: center;
             flex: 1;
             margin-bottom: 20px;
         }
         /* Footer */
         #footer {
-            background-color: #f1f1f1;
+            background-color: #333;
             color: white;
             text-align: center;
             padding: 20px;
