--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
         }
         /* Footer */
         #footer {
-            background-color: #333;
+            background-color: #ffe066;
             color: white;
             text-align: center;
-            padding: 20px;
+            font-size: 1.4em;
+            padding: 15px;
             position: fixed;
             bottom: 0;
             width: 100%;
