--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="#"><img src="logo.png" alt="Youth Spring Logo" height="50px"></a>
+        <a class="navbar-brand" href="#"><img src="Image/youthspringNGOs.ico" alt="Youth Spring Logo" height="50px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
