--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 </head>
 <body>
     <!-- Header -->
+    
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
@@ -105,6 +106,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
+            <img src="image/youthspringNGOs.png" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
             <h1>Empowering Nigerian Youth & The Helpless</h1>
             <p>Together, we can create opportunities for a brighter future.</p>
             <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
