--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div id="postbody" class="container">
     <p>What God cannot do does not exist.</p>
     <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
-    <img src="image/youthspringNGOs.png" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
+    <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
     <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
     <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
     <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
