--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
-        <a href="#about">About Us</a>
+        <a href="about.html">About Us</a>
         <a href="#loan">Get a Loan</a>
         <a href="#donate">Donate</a>
         <a href="#volunteer">Volunteer</a>
