--- a/index.html
+++ b/index.html
@@ -93,15 +93,14 @@
 </head>
 <body>
     <!-- Header -->
-    
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
         <a href="about.html">About Us</a>
-        <a href="#loan">Get a Loan</a>
-        <a href="#donate">Donate</a>
-        <a href="#volunteer">Volunteer</a>
-        <a href="#contact">Contact Us</a>
+        <a href="get-a-loan.html">Get a Loan</a>
+        <a href="donate.html">Donate</a>
+        <a href="volunteer.html">Volunteer</a>
+        <a href="contact.html">Contact Us</a>
     </div>
     <!-- Hero Section -->
     <section class="hero">
@@ -109,18 +108,18 @@
             <img src="image/youthspringNGOs.png" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
             <h1>Empowering Nigerian Youth & The Helpless</h1>
             <p>Together, we can create opportunities for a brighter future.</p>
-            <a href="#donate" class="btn btn-donate btn-lg">Support Our Cause</a>
+            <a href="donate.html" class="btn btn-donate btn-lg">Support Our Cause</a>
         </div>
-   </section>
-<!-- body post here -->
-<div id="postbody" class="container">
-    <p>What God cannot do does not exist.</p>
-    <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
-    <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
-    <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
-    <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
-    <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
-</div>
+    </section>
+    <!-- body post here -->
+    <div id="postbody" class="container">
+        <p>What God cannot do does not exist.</p>
+        <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
+        <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
+        <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
+        <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
+        <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
+    </div>
     <!-- Footer -->
     <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
