--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
-        <a href="about.html">About Us</a>
-        <a href="get-a-loan.html">Get a Loan</a>
-        <a href="donate.html">Donate</a>
-        <a href="volunteer.html">Volunteer</a>
-        <a href="contact.html">Contact Us</a>
-    </div>
+    <a href="pages/about.html">About Us</a>
+    <a href="pages/get-a-loan.html">Get a Loan</a>
+    <a href="pages/donate.html">Donate</a>
+    <a href="pages/volunteer.html">Volunteer</a>
+    <a href="pages/contact.html">Contact Us</a>
+</div>
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
