--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <a href="pages/about.html">About Us</a>
     <a href="pages/get-a-loan.html">Get a Loan</a>
     <a href="pages/donate.html">Donate</a>
-    <a href="pages/volunteer.html">Volunteer</a>
+    <a href="pages/programs.html">Our programs</a>
     <a href="pages/contact.html">Contact Us</a>
 </div>
     <!-- Hero Section -->
