--- a/pages/about.html
+++ b/pages/about.html
@@ -42,5 +42,6 @@
             <p>&copy; 2025 Youth Spring NGOs. All rights reserved.</p>
         </div>
     </footer>
+    <script>script.js</script>
 </body>
 </html>
