--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="pages/styles.css">
+    <link rel="stylesheet" href="../styles.css"> <!-- Adjust this path according to your file structure -->
 </head>
 <body>
     <!-- Header -->
@@ -42,6 +42,6 @@
             <p>&copy; 2025 Youth Spring NGOs. All rights reserved.</p>
         </div>
     </footer>
-    <script>script.js</script>
+    <script src="script.js"></script> <!-- Adjust this path according to your file structure -->
 </body>
 </html>
