--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -42,5 +42,6 @@
             <p>&copy; 2025 Youth Spring NGOs. All rights reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
