--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Navigation Grid -->
     <div class="nav-grid">
     <a href="pages/about.html">About Us</a>
-    <a href="pages/get-a-loan.html">Get a Loan</a>
+    <a href="pages/apply-for-loan.html">Get a Loan</a>
     <a href="pages/donate.html">Donate</a>
     <a href="pages/programs.html">Our programs</a>
     <a href="pages/contact.html">Contact Us</a>
