--- a/pages/programs.html
+++ b/pages/programs.html
@@ -4,28 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programs</title>
-    <link rel="stylesheet" href="pages/styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fdf6e3; /* Soft cream background */
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;              
+            flex-direction: column;
+            min-height: 100vh;        
+        }
+        /* Header */
+        #header {
+            background-color: #ffcc33; /* Sunflower yellow */
+            padding: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+        /* Navigation Grid */
+        .nav-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 10px;
+            background-color: #ffe066;
+            padding: 15px;
+            text-align: center;
+        }
+        .nav-grid a {
+            display: block;
+            background-color: #ff6600;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .nav-grid a:hover {
+            background-color: #cc5500;
+        }
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(to right, #ffcc33, #ff9933); /* Yellow-orange gradient */
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
+        }
+        .hero h1 {
+            font-size: 2.5em;
+            font-weight: bold;
+        }
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+        .btn-donate {
+            background-color: #ff6600; /* Deep orange */
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn-donate:hover {
+            background-color: #cc5500;
+        }
+        /* postbody */
+        #postbody{ 
+            font-size: 1.6em;
+            text-align: center;
+            flex: 1;
+            margin-bottom: 20px;
+        }
+        /* Footer */
+        #footer {
+            background-color: #ffe066;
+            color: white;
+            text-align: center;
+            font-size: 1.4em;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="image/youthspringNGOs.png" alt="Youth Spring Logo" height="50px"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="apply-for-loan.html">Apply for Loan</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
+    <div id="header">Youth Spring - Empowering Nigerian Youth</div>
+    <!-- Navigation Grid -->
+    <div class="nav-grid">
+        <a href="about.html">About Us</a>
+        <a href="apply-for-loan.html">Get a Loan</a>
+        <a href="donate.html">Donate</a>
+        <a href="programs.html">Our programs</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    
     <!-- Main Content -->
     <main>
         <section id="programs">
@@ -37,11 +114,8 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Youth Spring NGOs. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="script.js"></script>
+    <div id="footer">© 2025 Youth Spring NGOs. All rights reserved.</div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
