--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -1,1 +1,133 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Youth Spring</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fdf6e3; /* Soft cream background */
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;              
+            flex-direction: column;
+            min-height: 100vh;        
+        }
+        /* Header */
+        #header {
+            background-color: #ffcc33; /* Sunflower yellow */
+            padding: 15px;
+            text-align: center;
+            font-weight: bold;
+        }
+        /* Navigation Grid */
+        .nav-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 10px;
+            background-color: #ffe066;
+            padding: 15px;
+            text-align: center;
+        }
+        .nav-grid a {
+            display: block;
+            background-color: #ff6600;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .nav-grid a:hover {
+            background-color: #cc5500;
+        }
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(to right, #ffcc33, #ff9933); /* Yellow-orange gradient */
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
+        }
+        .hero h1 {
+            font-size: 2.5em;
+            font-weight: bold;
+        }
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+        .btn-donate {
+            background-color: #ff6600; /* Deep orange */
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn-donate:hover {
+            background-color: #cc5500;
+        }
+        /* postbody */
+        #postbody{ 
+            font-size: 1.6em;
+            text-align: center;
+            flex: 1;
+            margin-bottom: 20px;
+        }
+        /* Footer */
+        #footer {
+            background-color: #ffe066;
+            color: white;
+            text-align: center;
+            font-size: 1.4em;
+            padding: 15px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <!-- Header -->
+    <div id="header">Youth Spring - Contact Us</div>
+    <!-- Navigation Grid -->
+    <div class="nav-grid">
+        <a href="about.html">About Us</a>
+        <a href="apply-for-loan.html">Get a Loan</a>
+        <a href="donate.html">Donate</a>
+        <a href="programs.html">Our programs</a>
+        <a href="contact.html">Contact Us</a>
+    </div>
+    <!-- Contact Us Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <p>We would love to hear from you! Feel free to reach out to us with any questions or comments.</p>
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-donate">Send Message</button>
+            </form>
+        </div>
+    </section>
+    <!-- Footer -->
+    <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
