--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,6 +72,9 @@
         .btn-donate:hover {
             background-color: #cc5500;
         }
+        /*contact form*/
+        #contact{
+            
         /* postbody */
         #postbody{ 
             font-size: 1.6em;
@@ -105,7 +108,7 @@
     </div>
     <!-- Contact Us Section -->
     <section class="hero">
-        <div class="container">
+        <div id="contact" class="container">
             <h1>Contact Us</h1>
             <p>We would love to hear from you! Feel free to reach out to us with any questions or comments.</p>
             <form>
