--- a/pages/contact.html
+++ b/pages/contact.html
@@ -114,11 +114,12 @@
     <div id="header">Youth Spring - Contact Us</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
         <a href="programs.html">Our programs</a>
-        <a href="contact.html">Contact Us</a>
+        
     </div>
     <!-- Contact Us Section -->
     <section class="hero">
@@ -143,7 +144,9 @@
         </div>
     </section>
     <!-- Footer -->
-    <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
+    <div id="footer">© 2025 Youth Spring. All rights reserved.
+    <a href="contact.html">Contact Us</a>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
