--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -13,9 +13,9 @@
             color: #333;
             margin: 0;
             padding: 0;
-            display: flex;              
+            display: flex;
             flex-direction: column;
-            min-height: 100vh;        
+            min-height: 100vh;
         }
         /* Header */
         #header {
@@ -78,6 +78,14 @@
             flex: 1;
             margin-bottom: 20px;
         }
+        /* Apply for Loan Section */
+        #apply-for-loan {
+            background-image: url('image/youthspringNGOs.png'); /* Add your image path here */
+            background-size: cover;
+            background-position: center;
+            padding: 80px 20px;
+            color: white;
+        }
         /* Footer */
         #footer {
             background-color: #ffe066;
@@ -101,7 +109,6 @@
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
         <a href="programs.html">Our programs</a>
-        
     </div>
     
     <!-- Main Content -->
