--- a/pages/about.html
+++ b/pages/about.html
@@ -96,14 +96,26 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
         <a href="programs.html">Our programs</a>
-        <a href="contact.html">Contact Us</a>
+        
     </div>
     
     <!-- Main Content -->
     <main>
         <section id="about">
-           * ▋
+            <!-- Content of the about section goes here -->
+            hdjdj jdhj jejejr jjjdj rijjr nejjer 
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <div id="footer">
+        &copy; 2025 Youth Spring. All rights reserved.
+        <a href="contact.html">Contact Us</a>
+    </div>
+</body>
+</html>
