--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -104,7 +104,7 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
