--- a/pages/contact.html
+++ b/pages/contact.html
@@ -114,7 +114,7 @@
     <div id="header">Youth Spring - Contact Us</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
