--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
+    <a href="../index.html">Home</a>
     <a href="pages/about.html">About Us</a>
     <a href="pages/apply-for-loan.html">Get a Loan</a>
     <a href="pages/donate.html">Donate</a>
     <a href="pages/programs.html">Our programs</a>
-    <a href="pages/contact.html">Contact Us</a>
+    
 </div>
     <!-- Hero Section -->
     <section class="hero">
@@ -108,6 +109,41 @@
             <img src="image/youthspringNGOs.png" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
             <h1>Empowering Nigerian Youth & The Helpless</h1>
             <p>Together, we can create opportunities for a brighter future.</p>
+            <p>Use phrases like:
+
+"We are launching soon! Be among the first to support Nigeria’s youth."
+
+"The platform is under construction, but you can join our early supporters now!"
+
+"We’re building something BIG for Nigerian youth. Stay tuned!"
+ </p>
+            <div class="text-center p-4">
+  <h2>🚀 T-minus <span id="countdown"></span> until we go live!</h2>
+</div>
+
+<script>
+  const countdown = () => {
+    const launchDate = new Date("April 20, 2025 12:00:00").getTime();
+    const now = new Date().getTime();
+    const distance = launchDate - now;
+
+    if (distance < 0) {
+      document.getElementById("countdown").innerHTML = "We are LIVE! 🎉";
+      return;
+    }
+
+    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    const hours = Math.floor((distance / (1000 * 60 * 60)) % 24);
+    const mins = Math.floor((distance / (1000 * 60)) % 60);
+    const secs = Math.floor((distance / 1000) % 60);
+
+    document.getElementById("countdown").innerHTML =
+      `${days}d ${hours}h ${mins}m ${secs}s`;
+  };
+
+  setInterval(countdown, 1000);
+</script>
+
             <a href="donate.html" class="btn btn-donate btn-lg">Support Our Cause</a>
         </div>
     </section>
@@ -121,7 +157,9 @@
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
     <!-- Footer -->
-    <div id="footer">© 2025 Youth Spring. All rights reserved.</div>
+    <div id="footer">© 2025 Youth Spring. All rights reserved.
+    <a href="pages/contact.html">Contact Us</a>    
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
