--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,6 +83,7 @@
             display: flex;
             flex-direction: column;
             align-items: center; /* Center the text boxes */
+            text-color: black;
         }
         #contact .form-control {
             width: 100%;
@@ -141,6 +142,8 @@
                 </div>
                 <button type="submit" class="btn btn-donate">Send Message</button>
             </form>
+            <P>All you give today, will never be a waste. GOD BLESS YOU.</P>
+            <P>Your pockets will never get dry.</P>
         </div>
     </section>
     <!-- Footer -->
