--- a/pages/programs.html
+++ b/pages/programs.html
@@ -71,13 +71,27 @@
         .btn-donate:hover {
             background-color: #cc5500;
         }
-        /* postbody */
-        #postbody{ 
-            font-size: 1.6em;
-            text-align: center;
-            flex: 1;
-            margin-bottom: 20px;
+        /* Program Buttons */
+        .btn-warning {
+            background-color: #ff6600; /* Sunflower Yellow */
+            color: white;
+            font-size: 1.1rem;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
         }
+
+        .btn-warning:hover {
+            background-color: #cc5500; /* Darker orange on hover */
+            color: white;
+            text-decoration: none;
+        }
+
+        .mt-2 {
+            margin-top: 15px;
+        }
+
         /* Footer */
         #footer {
             background-color: #ffe066;
@@ -100,24 +114,99 @@
         <a href="about.html">About Us</a>
         <a href="apply-for-loan.html">Get a Loan</a>
         <a href="donate.html">Donate</a>
-        <a href="programs.html">Our programs</a>
-        
+        <a href="programs.html">Our Programs</a>
     </div>
     
     <!-- Main Content -->
     <main>
-        <section id="programs">
-            <div class="container">
-                <h1>Programs</h1>
-                <p>Discover our various programs designed to support and uplift the youth. [Add more details about your programs here...]</p>
+        <section id="programs" class="container my-4">
+            <h1 class="text-warning">Our Empowerment Programs</h1>
+            <div class="row g-4">
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>🛠️ Skills Acquisition & Training</h3>
+                        <p>We equip young people with practical skills such as tailoring, tech, agriculture, and crafts to create self-sustaining livelihoods.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>💰 Micro-Loan Support</h3>
+                        <p>Our interest-free loans help young Nigerians kickstart small businesses and scale up their hustle with ease and dignity.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Apply Now</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>🎓 Educational Support</h3>
+                        <p>We provide academic grants, free JAMB forms, and learning tools to secondary and tertiary students in underserved areas.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>👩‍💼 Women & Girl Empowerment</h3>
+                        <p>Special focus programs for women to access mentorship, digital skills, menstrual hygiene packs, and startup capital.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>🤝 Community Outreach</h3>
+                        <p>We run quarterly outreach projects with food drives, clean-up exercises, school donations, and rural enlightenment campaigns.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="p-4 bg-light border rounded">
+                        <h3>💻 YouthTech Bootcamp</h3>
+                        <p>Our digital bootcamps expose young people to opportunities in tech like coding, content creation, blockchain, and freelancing.</p>
+                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Bootcamp</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
-    <div id="footer">© 2025 Youth Spring NGOs. All rights reserved.
-    <a href="contact.html">Contact Us</a>
+    <!-- Modal -->
+    <div class="modal fade" id="programModal" tabindex="-1" aria-labelledby="programModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="programModalLabel">Program Registration</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Thank you for showing interest in our program. Please provide your details to get started.</p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter your full name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone Number</label>
+                            <input type="text" class="form-control" id="phone" placeholder="Enter your phone number">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-warning">Submit</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Footer -->
+    <div id="footer">
+        © 2025 Youth Spring NGOs. All rights reserved.
+        <a href="contact.html" class="text-white">Contact Us</a>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
