--- a/pages/programs.html
+++ b/pages/programs.html
@@ -120,48 +120,80 @@
     <!-- Main Content -->
     <main>
         <section id="programs" class="container my-4">
-            <h1 class="text-warning">Our Empowerment Programs</h1>
+            <h1 class="text-warning">🌻 Youth Spring Programs</h1>
+            <p>“Empowering the roots to bloom into the future.”</p>
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>🛠️ Skills Acquisition & Training</h3>
-                        <p>We equip young people with practical skills such as tailoring, tech, agriculture, and crafts to create self-sustaining livelihoods.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                        <h3>✅ Empowerment Loans Initiative</h3>
+                        <p>Goal: Provide interest-free, small-scale startup loans to youth and underprivileged individuals with viable ideas.</p>
+                        <ul>
+                            <li>Simple online registration process</li>
+                            <li>Community-backed selection</li>
+                            <li>Business mentorship during and after disbursement</li>
+                            <li>Monthly success stories and follow-ups</li>
+                        </ul>
+                        <p>🟡 Tagline: “We don’t give handouts. We give hand-ups.”</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>💰 Micro-Loan Support</h3>
-                        <p>Our interest-free loans help young Nigerians kickstart small businesses and scale up their hustle with ease and dignity.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Apply Now</a>
+                        <h3>✅ Skill Spring (Digital & Vocational Empowerment)</h3>
+                        <p>Goal: Equip individuals with practical skills that make them financially independent.</p>
+                        <ul>
+                            <li>Tech: Web development, graphics, content creation</li>
+                            <li>Vocational: Fashion design, solar installation, catering</li>
+                            <li>Certification and starter kits for top participants</li>
+                        </ul>
+                        <p>🟡 Tagline: “Learn. Build. Earn.”</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>🎓 Educational Support</h3>
-                        <p>We provide academic grants, free JAMB forms, and learning tools to secondary and tertiary students in underserved areas.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                        <h3>✅ Spring Scholars (Student Grant Program)</h3>
+                        <p>Goal: Support bright but struggling students with grants, learning materials, and mentorship.</p>
+                        <ul>
+                            <li>Open applications every semester</li>
+                            <li>Priority for students with proof of need</li>
+                            <li>Academic, character, and ambition considered</li>
+                        </ul>
+                        <p>🟡 Tagline: “No dream should die because of tuition.”</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>👩‍💼 Women & Girl Empowerment</h3>
-                        <p>Special focus programs for women to access mentorship, digital skills, menstrual hygiene packs, and startup capital.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                        <h3>✅ Community Relief & Outreach</h3>
+                        <p>Goal: Direct aid and relief materials to communities in need during crises or emergencies.</p>
+                        <ul>
+                            <li>Organize food drives, clothing donations, and medical outreaches</li>
+                            <li>Partner with local NGOs and hospitals</li>
+                            <li>Mobilize youth volunteers to serve in their communities</li>
+                        </ul>
+                        <p>🟡 Tagline: “The power of people helping people.”</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>🤝 Community Outreach</h3>
-                        <p>We run quarterly outreach projects with food drives, clean-up exercises, school donations, and rural enlightenment campaigns.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Program</a>
+                        <h3>✅ Awareness & Advocacy</h3>
+                        <p>Goal: Educate and sensitize the public on key societal issues: mental health, abuse, entrepreneurship, and leadership.</p>
+                        <ul>
+                            <li>Online campaigns</li>
+                            <li>Radio & local outreach events</li>
+                            <li>Street campaigns and community forums</li>
+                        </ul>
+                        <p>🟡 Tagline: “Change starts with awareness.”</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="p-4 bg-light border rounded">
-                        <h3>💻 YouthTech Bootcamp</h3>
-                        <p>Our digital bootcamps expose young people to opportunities in tech like coding, content creation, blockchain, and freelancing.</p>
-                        <a href="#" class="btn btn-warning mt-2" data-bs-toggle="modal" data-bs-target="#programModal">Join Bootcamp</a>
+                        <h3>✅ Youth Spring Network (Alumni & Partners)</h3>
+                        <p>Goal: Build a network of empowered alumni and partners who give back and mentor.</p>
+                        <ul>
+                            <li>Job referrals & internship opportunities</li>
+                            <li>Volunteer and speaker invites</li>
+                            <li>Peer-to-peer business collaborations</li>
+                        </ul>
+                        <p>🟡 Tagline: “You rise. You lift others.”</p>
                     </div>
                 </div>
             </div>
